--- a/demo/index.html
+++ b/demo/index.html
@@ -47,6 +47,7 @@
 
     <!-- Dialog -->
     <script src="/js/dialog/dialog_directive.js"></script>
+    <script src="/js/dialog/dialog_service.js"></script>
 
     <!-- Dropdown -->
     <script src="/js/dropdown/dropdown_directive.js"></script>
