--- a/demo/index.html
+++ b/demo/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="lumx-demo" ng-controller="AppController">
+<html ng-app="lumx-demo">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,26 +9,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
     <link rel="stylesheet" href="/lumx.css">
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/styles/github.min.css">
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700">
+    
     <link rel="shortcut icon" type="image/png" href="/favicon.png">
 </head>
 
-<body ng-class="{ 'home': checkHome() }">
-    <ng-include src="'/includes/common/header.html'"></ng-include>
+<body>
+    <div class="header" ui-view="header"></div>
 
-    <!-- Main -->
-    <div class="main" ng-view></div>
+    <div class="app">
+        <div class="app__wrapper">
+            <div class="app__sidebar" ui-view="sidebar"></div>
+            <div class="app__main" ui-view="main"></div>
+        </div>
+    </div>
 
     <!-- Libs -->
     <script src="/libs/jquery/dist/jquery.js"></script>
     <script src="/libs/velocity/velocity.js"></script>
     <script src="/libs/moment/min/moment-with-locales.js"></script>
-    <script src="/libs/highlightjs/highlight.pack.js"></script>
 
     <!-- Angular -->
     <script src="/libs/angular/angular.js"></script>
-    <script src="/libs/angular-route/angular-route.js"></script>
-    <script src="/js/vendor/angular-highlightjs/angular-highlightjs.js"></script>
+    <script src="/libs/angular-ui-router/release/angular-ui-router.min.js"></script>
+
+    <!-- HighlightJs -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/highlight.min.js"></script>
+    <script src="/libs/angular-highlightjs/angular-highlightjs.min.js"></script>
 
     <!-- LumX -->
     <script src="/js/lumx.js"></script>
@@ -106,6 +114,7 @@
 
     <!-- App -->
     <script src="/app.js"></script>
+    <script src="/js/demo/js/component_directive.js"></script>
 
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
