--- a/modules/button/demo/button.html
+++ b/modules/button/demo/button.html
@@ -1,100 +1,63 @@
 <!-- Sidebar -->
-<ng-include src="'/includes/sidebar/sidebar-css.html'"></ng-include>
-
 <div class="main-section">
-    <h3 class="main-section__title">Buttons</h3>
+    <h1 class="main-section__title">Buttons</h1>
 
-    <div class="main-section__content">
-        <!-- Types -->
-        <h4 class="main-section__subtitle">Types</h4>
+    <p class="main-section__intro">
+        <code>lx-button</code> is a button directive that will become a link element if you specify a <code>href</code> or <code>ng-href</code> attribute.<br />
+        Otherwise, it will become a <code>button</code> element.
+    </p>
+    
+    <lx-component lx-title="Types" lx-path="/includes/modules/button/includes/types.html" lx-toolbar="true">
+        Four different types of button are available: <code>raised</code>, <code>flat</code>, <code>fab</code> and <code>icon</code>.
+    </lx-component>
 
-        <div class="example mt++">
-            <div class="example__content">
-                <ng-include src="'/includes/modules/button/includes/types.html'"></ng-include>
-            </div>
+    <lx-component lx-title="Disabled state" lx-path="/includes/modules/button/includes/states.html" lx-toolbar="true">
+        Disabled style will automaticly be applied when using <code>ng-disabled</code> or <code>disabled</code> attribute.
+    </lx-component>
 
-            <!-- Example -->
-            <div class="example__code" hljs include="'/includes/modules/button/includes/types.html'" language="html"></div>
-            <!-- /Example -->
-        </div>
-        <!-- /Types -->
-    </div>
+    <lx-component lx-title="Sizes" lx-path="/includes/modules/button/includes/sizes.html" lx-toolbar="true">
+        Five different sizes are available and defined in <code>dist/scss/core/settings/defaults.scss</code>
+    </lx-component>
 
-    <div class="main-section__content">
-        <!-- States -->
-        <h4 class="main-section__subtitle">States</h4>
+    <lx-component lx-title="Main colors" lx-path="/includes/modules/button/includes/colors.html" lx-toolbar="true">
+        You can use color helpers to quickly create colored buttons.<br />
+        You can set button background color with main colors defined in <code>dist/scss/core/settings/defaults.scss</code><br />
+        Text/Icon color and ripple colors will be automaticly set according to the color.
+    </lx-component>
 
-        <div class="example mt++">
-            <div class="example__content">
-                <ng-include src="'/includes/modules/button/includes/states.html'"></ng-include>
-            </div>
+    <lx-component lx-title="Custom colors" lx-path="/includes/modules/button/includes/custom-colors.html" lx-toolbar="true">
+        Or you can create a fully customizable button with background and text color helpers.<br />
+        You need to use the css version of the button instead of the directive.<br />
+        Moreover, you should specfify the ripple color by using the ripple directive.
+    </lx-component>
 
-            <!-- Example -->
-            <div class="example__code" hljs include="'/includes/modules/button/includes/states.html'" language="html"></div>
-            <!-- /Example -->
-        </div>
-        <!-- /States -->
-    </div>
+    <lx-component-attributes>
+        <table>
+            <thead>
+                <tr>
+                    <th>Parameter</th>
+                    <th>Type</th>
+                    <th>Description</th>
+                </tr>
+            </thead>
 
-    <div class="main-section__content">
-        <!-- Sizes -->
-        <h4 class="main-section__subtitle">Sizes</h4>
-
-        <div class="example mt++">
-            <div class="example__content">
-                <ng-include src="'/includes/modules/button/includes/sizes.html'"></ng-include>
-            </div>
-
-            <!-- Example -->
-            <div class="example__code" hljs include="'/includes/modules/button/includes/sizes.html'" language="html"></div>
-            <!-- /Example -->
-        </div>
-        <!-- /Sizes -->
-    </div>
-
-    <div class="main-section__content">
-        <!-- Colors -->
-        <div class="paragraph">
-            <h4 class="main-section__subtitle">Main colors</h4>
-
-            <p>
-                You can use color helpers to quickly create colored buttons.<br />
-                You can set button background color with main colors defined in <code>dist/scss/core/settings/_settings.defaults.scss</code>.<br />
-                Text/Icon color and ripple colors will be automaticly set according to the color.
-            </p>
-        </div>
-
-        <div class="example mt++">
-            <div class="example__content">
-                <ng-include src="'/includes/modules/button/includes/colors.html'"></ng-include>
-            </div>
-
-            <!-- Example -->
-            <div class="example__code" hljs include="'/includes/modules/button/includes/colors.html'" language="html"></div>
-            <!-- /Example -->
-        </div>
-        <!-- /Colors -->
-    </div>
-
-    <div class="main-section__content">
-        <!-- Colors -->
-        <div class="paragraph">
-            <h4 class="main-section__subtitle">Custom colors</h4>
-
-            <p>
-                Or you can create a fully customizable button with background and text color helpers. Moreover, you should specfify the ripple color.
-            </p>
-        </div>
-
-        <div class="example mt++">
-            <div class="example__content">
-                <ng-include src="'/includes/modules/button/includes/custom-colors.html'"></ng-include>
-            </div>
-
-            <!-- Example -->
-            <div class="example__code" hljs include="'/includes/modules/button/includes/custom-colors.html'" language="html"></div>
-            <!-- /Example -->
-        </div>
-        <!-- /Colors -->
-    </div>
+            <tbody>
+                <tr>
+                    <td>lx-size</td>
+                    <td><code>string</code></td>
+                    <td>Define the button size. Options: <code>xs</code>, <code>s</code>, <code>m</code>, <code>l</code>, <code>xl</code></td>
+                </tr>
+                <tr>
+                    <td>lx-color</td>
+                    <td><code>string</code></td>
+                    <td>Define the button color. Options: colors defined in colors and sizes section in <code>dist/scss/core/settings/defaults.scss</code></td>
+                </tr>
+                <tr>
+                    <td>lx-type</td>
+                    <td><code>string</code></td>
+                    <td>Define the button type. Options: <code>raised</code>, <code>flat</code>, <code>fab</code>, <code>icon</code></td>
+                </tr>
+            </tbody>
+        </table>
+    </lx-component-attributes>
 </div>
