chore demo: create text field documentation

--- a/modules/button/demo/button.html
+++ b/modules/button/demo/button.html
@@ -7,25 +7,25 @@
         Otherwise, it will become a <code>button</code> element.
     </p>
     
-    <lx-component lx-title="Types" lx-path="/includes/modules/button/includes/types.html" lx-toolbar="true">
+    <lx-component lx-title="Types" lx-path="/includes/modules/button/includes/types.html">
         Four different types of button are available: <code>raised</code>, <code>flat</code>, <code>fab</code> and <code>icon</code>.
     </lx-component>
 
-    <lx-component lx-title="Disabled state" lx-path="/includes/modules/button/includes/states.html" lx-toolbar="true">
+    <lx-component lx-title="Disabled state" lx-path="/includes/modules/button/includes/states.html">
         Disabled style will automaticly be applied when using <code>ng-disabled</code> or <code>disabled</code> attribute.
     </lx-component>
 
-    <lx-component lx-title="Sizes" lx-path="/includes/modules/button/includes/sizes.html" lx-toolbar="true">
+    <lx-component lx-title="Sizes" lx-path="/includes/modules/button/includes/sizes.html">
         Five different sizes are available and defined in <code>dist/scss/core/settings/defaults.scss</code>
     </lx-component>
 
-    <lx-component lx-title="Main colors" lx-path="/includes/modules/button/includes/colors.html" lx-toolbar="true">
+    <lx-component lx-title="Main colors" lx-path="/includes/modules/button/includes/colors.html">
         You can use color helpers to quickly create colored buttons.<br />
         You can set button background color with main colors defined in <code>dist/scss/core/settings/defaults.scss</code><br />
         Text/Icon color and ripple colors will be automaticly set according to the color.
     </lx-component>
 
-    <lx-component lx-title="Custom colors" lx-path="/includes/modules/button/includes/custom-colors.html" lx-toolbar="true">
+    <lx-component lx-title="Custom colors" lx-path="/includes/modules/button/includes/custom-colors.html">
         Or you can create a fully customizable button with background and text color helpers.<br />
         You need to use the css version of the button instead of the directive.<br />
         Moreover, you should specfify the ripple color by using the ripple directive.
