chore demo: add card documentation

--- a/modules/button/demo/button.html
+++ b/modules/button/demo/button.html
@@ -1,6 +1,6 @@
 <!-- Sidebar -->
 <div class="main-section">
-    <h1 class="main-section__title">Buttons</h1>
+    <h1 class="main-section__title">Button</h1>
 
     <p class="main-section__intro">
         <code>lx-button</code> is a button directive that will become a link element if you specify a <code>href</code> or <code>ng-href</code> attribute.<br />
