--- a/modules/text-field/demo/text-field.html
+++ b/modules/text-field/demo/text-field.html
@@ -1,6 +1,6 @@
 <!-- Sidebar -->
 <div class="main-section">
-    <h3 class="main-section__title">Text fields</h3>
+    <h1 class="main-section__title">Text field</h1>
 
     <p class="main-section__intro">
         <code>lx-text-field</code> is an input directive that will become an <code>input</code> element or a <code>textarea</code> element according to the transcluded element.
