--- a/modules/card/demo/card.html
+++ b/modules/card/demo/card.html
@@ -1,18 +1,12 @@
 <!-- Sidebar -->
-<ng-include src="'/includes/sidebar/sidebar-css.html'"></ng-include>
-
 <div class="main-section">
-    <h3 class="main-section__title">Cards</h3>
+    <h1 class="main-section__title">Card</h1>
 
-    <div class="main-section__content">
-        <div class="example">
-            <div class="example__content">
-                <ng-include src="'/includes/modules/card/includes/example.html'"></ng-include>
-            </div>
+    <p class="main-section__intro">
+        LumX provides a card CSS component with various image positions.<br />CSS helpers are widely used to set different layouts.
+    </p>
 
-            <!-- Example -->
-            <div class="example__code" hljs include="'/includes/modules/card/includes/example.html'" language="html">
-            <!-- /Example -->
-        </div>
-    </div>
+    <lx-component lx-title="Card without image" lx-path="/includes/modules/card/includes/no-image.html"></lx-component>
+    <lx-component lx-title="Card with image on top" lx-path="/includes/modules/card/includes/image-top.html"></lx-component>
+    <lx-component lx-title="Card with image on left" lx-path="/includes/modules/card/includes/image-left.html"></lx-component>
 </div>
