chore demo: add checkbox documentation

--- a/demo/index.html
+++ b/demo/index.html
@@ -50,6 +50,7 @@
     <script src="/js/templates/button_template.js"></script>
 
     <!-- Checkbox -->
+    <script src="/js/checkbox/demo/demo-checkbox_controller.js"></script>
     <script src="/js/checkbox/checkbox_directive.js"></script>
     <script src="/js/templates/checkbox_template.js"></script>
 
