chore demo: add data table documentation

--- a/modules/data-table/demo/data-table.html
+++ b/modules/data-table/demo/data-table.html
@@ -1,18 +1,9 @@
-<!-- Sidebar -->
-<ng-include src="'/includes/sidebar/sidebar-css.html'"></ng-include>
-
 <div class="main-section">
-    <h3 class="main-section__title">Data table</h3>
+    <h1 class="main-section__title">Data table</h1>
 
-    <div class="main-section__content">
-        <div class="example">
-            <div class="example__content p0">
-                <ng-include src="'/includes/modules/data-table/includes/example.html'"></ng-include>
-            </div>
+    <p class="main-section__intro">
+        LumX provides a data table CSS component with various helpers for sorting options, selectable row, etc.
+    </p>
 
-            <!-- Example -->
-            <div class="example__code" hljs include="'/includes/modules/data-table/includes/example.html'" language="html">
-            <!-- /Example -->
-        </div>
-    </div>
+    <lx-component lx-title="Basic usage" lx-path="/includes/modules/data-table/includes/example.html"></lx-component>
 </div>
