chore demo: add date picker documentation

--- a/demo/index.html
+++ b/demo/index.html
@@ -55,6 +55,7 @@
     <script src="/js/templates/checkbox_template.js"></script>
 
     <!-- Date picker -->
+    <script src="/js/date-picker/demo/demo-date-picker_controller.js"></script>
     <script src="/js/date-picker/date-picker_directive.js"></script>
     <script src="/js/templates/date-picker_template.js"></script>
 
