--- a/modules/text-field/demo/text-field.html
+++ b/modules/text-field/demo/text-field.html
@@ -31,12 +31,12 @@
                 <tr>
                     <td>lx-fixed-label</td>
                     <td><code>boolean</code></td>
-                    <td>When present, labels will act like classic placeholders.</td>
+                    <td>When present, input label will act like a classic placeholder.</td>
                 </tr>
                 <tr>
                     <td>lx-icon</td>
                     <td><code>string</code></td>
-                    <td>Add an icon next to the text input. Input must have a fixed label in this case.</td>
+                    <td>Add an icon next to the input. Input must have a fixed label in this case.</td>
                 </tr>
                 <tr>
                     <td>lx-label</td>
