chore demo: update file names

--- a/modules/checkbox/demo/checkbox.html
+++ b/modules/checkbox/demo/checkbox.html
@@ -5,17 +5,17 @@
         <code>lx-checkbox</code> is a checkbox directive that will become a checkbox input element.
     </p>
 
-    <lx-component lx-title="Basic usage" lx-path="/includes/modules/checkbox/includes/basic.html">
+    <lx-component lx-title="Basic usage" lx-path="/includes/modules/checkbox/includes/basic.html" lx-js-path="/js/checkbox/demo/demo-checkbox_controller.js">
         You can specify the checkbox label as transcluded element.<br />
         If you want to specify a helper message, you will need to transclude two directives.<br />
         <code>lx-checkbox-label</code> for the label and <code>lx-checkbox-help</code> for the helper message.
     </lx-component>
 
-    <lx-component lx-title="Disabled state" lx-path="/includes/modules/checkbox/includes/states.html">
+    <lx-component lx-title="Disabled state" lx-path="/includes/modules/checkbox/includes/state.html" lx-js-path="/js/checkbox/demo/demo-checkbox_controller.js">
         Disabled style will automaticly be applied when using <code>ng-disabled</code> or <code>disabled</code> attribute.
     </lx-component>
 
-    <lx-component lx-title="Main colors" lx-path="/includes/modules/checkbox/includes/colors.html">
+    <lx-component lx-title="Main colors" lx-path="/includes/modules/checkbox/includes/color.html" lx-js-path="/js/checkbox/demo/demo-checkbox_controller.js">
         You can specify checkbox color with main colors defined in <code>dist/scss/core/settings/defaults.scss</code>
     </lx-component>
 
