--- a/modules/text-field/demo/text-field.html
+++ b/modules/text-field/demo/text-field.html
@@ -6,11 +6,11 @@
         <code>lx-text-field</code> is an input directive that will become an <code>input</code> element or a <code>textarea</code> element according to the transcluded element.
     </p>
 
-    <lx-component lx-title="Floating label" lx-path="/includes/modules/text-field/includes/floating-label.html"></lx-component>
-    <lx-component lx-title="Fixed label" lx-path="/includes/modules/text-field/includes/fixed-label.html"></lx-component>
-    <lx-component lx-title="Textarea" lx-path="/includes/modules/text-field/includes/textarea.html"></lx-component>
-    <lx-component lx-title="States" lx-path="/includes/modules/text-field/includes/states.html"></lx-component>
-    <lx-component lx-title="Theme" lx-path="/includes/modules/text-field/includes/theme.html"></lx-component>
+    <lx-component lx-title="Basic usage" lx-path="/includes/modules/text-field/includes/basic.html" lx-js-path="/js/text-field/demo/demo-text-field_controller.js"></lx-component>
+    <lx-component lx-title="Fixed label" lx-path="/includes/modules/text-field/includes/fixed-label.html" lx-js-path="/js/text-field/demo/demo-text-field_controller.js"></lx-component>
+    <lx-component lx-title="Textarea" lx-path="/includes/modules/text-field/includes/textarea.html" lx-js-path="/js/text-field/demo/demo-text-field_controller.js"></lx-component>
+    <lx-component lx-title="States" lx-path="/includes/modules/text-field/includes/state.html" lx-js-path="/js/text-field/demo/demo-text-field_controller.js"></lx-component>
+    <lx-component lx-title="Theme" lx-path="/includes/modules/text-field/includes/theme.html" lx-js-path="/js/text-field/demo/demo-text-field_controller.js"></lx-component>
 
     <lx-component-attributes>
         <table>
