chore demo: add dialog documentation

--- a/demo/index.html
+++ b/demo/index.html
@@ -60,6 +60,7 @@
     <script src="/js/templates/date-picker_template.js"></script>
 
     <!-- Dialog -->
+    <script src="/js/dialog/demo/demo-dialog_controller.js"></script>
     <script src="/js/dialog/dialog_directive.js"></script>
     <script src="/js/dialog/dialog_service.js"></script>
 
