--- a/modules/dropdown/demo/dropdown.html
+++ b/modules/dropdown/demo/dropdown.html
@@ -1,73 +1,48 @@
-<!-- Sidebar -->
-<ng-include src="'/includes/sidebar/sidebar-directives.html'"></ng-include>
-
 <div class="main-section">
-    <h3 class="main-section__title">Dropdowns</h3>
+    <h1 class="main-section__title">Dropdown</h1>
 
-    <div class="main-section__content">
-        <div class="example">
-            <div class="example__content">
-                <ng-include src="'/includes/modules/dropdown/includes/example.html'"></ng-include>
-            </div>
+    <p class="main-section__intro">
+        <code>lx-dropdown</code> is a directive that create a dropdown menu.
+    </p>
 
-            <!-- Example -->
-            <div class="example__code" hljs include="'/includes/modules/dropdown/includes/example.html'" language="html"></div>
-            <!-- /Example -->
-        </div>
-    </div>
+    <lx-component lx-title="Basic usage" lx-path="/includes/modules/dropdown/includes/basic.html">
+        You need to transclude two directives : <code>lx-dropdown-toggle</code> that transclude the toggle button and <code>lx-dropdown-menu</code> that transclude the menu content.
+    </lx-component>
 
-    <div class="main-section__content">
-        <h4 class="main-section__subtitle">Usage</h4>
+    <lx-component lx-title="Options" lx-path="/includes/modules/dropdown/includes/option.html"></lx-component>
 
-        <div class="example mt++">
-            <!-- Example -->
-            <div class="example__code" hljs include="'/includes/modules/dropdown/includes/usage.html'" language="html"></div>
-            <!-- /Example -->
-        </div>
-    </div>
-
-    <div class="main-section__content">
-        <h4 class="main-section__subtitle">API</h4>
-
-        <table class="data-table mt++">
+    <lx-component-attributes>
+        <table>
             <thead>
                 <tr>
-                    <th>Attr</th>
+                    <th>Parameter</th>
                     <th>Type</th>
-                    <th>Default</th>
-                    <th>Details</th>
+                    <th>Description</th>
                 </tr>
             </thead>
 
             <tbody>
                 <tr>
-                    <td>position<br /><i>(optionnal)</i></td>
-                    <td><code>string</code></td>
-                    <td>left</td>
-                    <td>
-                        The position of the dropdown menu.
-                    </td>
-                </tr>
-
-                <tr>
-                    <td>width<br /><i>(optionnal)</i></td>
-                    <td><code>string</code></td>
-                    <td>undefined</td>
-                    <td>
-                        If 'full' specified, fit dropdown menu width to dropdown toggle width.<br />
-                        If a number is specified, fit to toggle width and add this value to dropdown menu.
-                    </td>
-                </tr>
-
-                <tr>
-                    <td>from-top<br /><i>(optionnal)</i></td>
+                    <td>lx-escape-close</td>
                     <td><code>boolean</code></td>
-                    <td>false</td>
-                    <td>
-                        Dropdown menu top will correspond to dropdown toggle top instead of dropdown toggle bottom.
-                    </td>
+                    <td>Specify if the dropdown should be closed with escape key. Default: <code>true</code></td>
+                </tr>
+                <tr>
+                    <td>lx-over-toggle</td>
+                    <td><code>boolean</code></td>
+                    <td>Specify if the dropdown should be opened over the toggle button.</td>
+                </tr>
+                <tr>
+                    <td>lx-position</td>
+                    <td><code>string</code></td>
+                    <td>Define the position of the dropdown menu. Options: <code>left</code> (default), <code>right</code></td>
+                </tr>
+                <tr>
+                    <td>lx-width</td>
+                    <td><code>string</code></td>
+                    <td>Define the dropdown menu width in pixels. If a percent value is defined, the dropdown menu width will be relative to the width of the toggle button.</td>
                 </tr>
             </tbody>
         </table>
-    </div>
+    </lx-component-attributes>
 </div>
