chore demo: add parameter default values

--- a/modules/checkbox/demo/checkbox.html
+++ b/modules/checkbox/demo/checkbox.html
@@ -25,6 +25,7 @@
                 <tr>
                     <th>Parameter</th>
                     <th>Type</th>
+                    <th>Default</th>
                     <th>Description</th>
                 </tr>
             </thead>
@@ -33,6 +34,7 @@
                 <tr>
                     <td>lx-color</td>
                     <td><code>string</code></td>
+                    <td><code>accent</code></td>
                     <td>Define the button color. Options: colors defined in colors and sizes section in <code>dist/scss/core/settings/defaults.scss</code></td>
                 </tr>
             </tbody>
