--- a/modules/dialog/demo/dialog.html
+++ b/modules/dialog/demo/dialog.html
@@ -15,6 +15,7 @@
                 <tr>
                     <th>Parameter</th>
                     <th>Type</th>
+                    <th>Default</th>
                     <th>Description</th>
                 </tr>
             </thead>
@@ -23,12 +24,14 @@
                 <tr>
                     <td>lx-auto-close</td>
                     <td><code>boolean</code></td>
-                    <td>Specify if the dialog should be closed when clicking outside. Default: <code>true</code></td>
+                    <td><code>true</code></td>
+                    <td>Specify if the dialog should be closed when clicking outside.</td>
                 </tr>
                 <tr>
                     <td>lx-escape-close</td>
                     <td><code>boolean</code></td>
-                    <td>Specify if the dialog should be closed with escape key. Default: <code>true</code></td>
+                    <td><code>true</code></td>
+                    <td>Specify if the dialog should be closed with escape key.</td>
                 </tr>
             </tbody>
         </table>
