--- a/modules/text-field/demo/text-field.html
+++ b/modules/text-field/demo/text-field.html
@@ -18,6 +18,7 @@
                 <tr>
                     <th>Parameter</th>
                     <th>Type</th>
+                    <th>Default</th>
                     <th>Description</th>
                 </tr>
             </thead>
@@ -26,31 +27,37 @@
                 <tr>
                     <td>lx-error</td>
                     <td><code>boolean</code></td>
+                    <td></td>
                     <td>When present, set red error style.</td>
                 </tr>
                 <tr>
                     <td>lx-fixed-label</td>
                     <td><code>boolean</code></td>
+                    <td></td>
                     <td>When present, input label will act like a classic placeholder.</td>
                 </tr>
                 <tr>
                     <td>lx-icon</td>
                     <td><code>string</code></td>
+                    <td></td>
                     <td>Add an icon next to the input. Input must have a fixed label in this case.</td>
                 </tr>
                 <tr>
-                    <td>lx-label</td>
+                    <td>lx-label*</td>
                     <td><code>string</code></td>
-                    <td>The label of the input displayed as a placeholder (required).</td>
+                    <td></td>
+                    <td>The label of the input displayed as a placeholder.</td>
                 </tr>
                 <tr>
                     <td>lx-theme</td>
                     <td><code>string</code></td>
-                    <td>Set this option to dark if inputs are displayed into a dark box. Options: <code>light</code> (default), <code>dark</code></td>
+                    <td><code>light</code></td>
+                    <td>Set this option to dark if inputs are displayed into a dark box. Options: <code>light</code>, <code>dark</code></td>
                 </tr>
                 <tr>
                     <td>lx-valid</td>
                     <td><code>boolean</code></td>
+                    <td></td>
                     <td>When present, set green valid style.</td>
                 </tr>
             </tbody>
