--- a/modules/button/demo/button.html
+++ b/modules/button/demo/button.html
@@ -20,7 +20,7 @@
 
     <lx-component lx-title="Main colors" lx-path="/includes/modules/button/includes/color.html">
         You can use color helpers to quickly create colored buttons.<br />
-        You can set button background color with main colors defined in <code>dist/scss/core/settings/defaults.scss</code><br />
+        You can set button color with main colors defined in <code>dist/scss/core/settings/defaults.scss</code><br />
         Text/Icon color and ripple colors will be automaticly set according to the color.
     </lx-component>
 
@@ -36,6 +36,7 @@
                 <tr>
                     <th>Parameter</th>
                     <th>Type</th>
+                    <th>Default</th>
                     <th>Description</th>
                 </tr>
             </thead>
@@ -44,16 +45,19 @@
                 <tr>
                     <td>lx-size</td>
                     <td><code>string</code></td>
+                    <td><code>m</code></td>
                     <td>Define the button size. Options: <code>xs</code>, <code>s</code>, <code>m</code>, <code>l</code>, <code>xl</code></td>
                 </tr>
                 <tr>
                     <td>lx-color</td>
                     <td><code>string</code></td>
+                    <td><code>primary</code></td>
                     <td>Define the button color. Options: colors defined in colors and sizes section in <code>dist/scss/core/settings/defaults.scss</code></td>
                 </tr>
                 <tr>
                     <td>lx-type</td>
                     <td><code>string</code></td>
+                    <td><code>raised</code></td>
                     <td>Define the button type. Options: <code>raised</code>, <code>flat</code>, <code>fab</code>, <code>icon</code></td>
                 </tr>
             </tbody>
